--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     
     <head>
         <meta charset="utf-8"/>
-        <title>[ Demetris Zeinalipour @ UCY ]</title>
+        <title>[ Tempestt Neal @ USF ]</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         
         <!-- Font Awesome Icons -->
@@ -124,7 +124,7 @@
             <div class="container">
                 <div align="left" class="col-md-3">
                     <a target="_blank" href="images/zeinalipour.jpg">
-                        <img id="mobile-img" src="images/zeinalipour.small.jpg" width="200" border="0" height="250" alt=""></a>
+                        <img id="mobile-img" src="images/neal.small.jpg" width="200" border="0" height="250" alt=""></a>
                 </div>
                 <div align="left" class="col-md-4">
                     <h2>Demetris Zeinalipour
