--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <section  name="home" id="home" style="margin-top:40px">
             <div class="container">
                 <div align="left" class="col-md-3">
-                    <a target="_blank" href="images/zeinalipour.jpg">
+                    <a target="_blank" href="images/neal.small.jpeg">
                         <img id="mobile-img" src="images/neal.small.jpg" width="200" border="0" height="250" alt=""></a>
                 </div>
                 <div align="left" class="col-md-4">
