--- a/index.html
+++ b/index.html
@@ -138,13 +138,7 @@
                          P.O. Box 20537<br>
                          1678 Nicosia, CYPRUS<br>-->
                         Tel/Fax: <a href="tel:18133969353">(813)396-9353</a> <br/>
-                        Email:
-                        <script language="JavaScript">
-                            <!--
-                            document.write("&nbsp;");
-                            spiderjam('tjneal','usf.edu');
-                            -->
-                            </script><br/>
+                        Email: tjneal AT usf DOT edu<br/>
                         Lab: <a target="_blank" href="https://dmsl.cs.ucy.ac.cy/">http://dmsl.cs.ucy.ac.cy/</a><br>
                         Directions: <a target="_blank" href="https://goo.gl/maps/ApRy94Ci57n3USYZ8">https://goo.gl/maps/ApRy94Ci57n3USYZ8</a>
                     </h4>
