--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                     <div class="allshow" style="display:none;" id="tab-publications-content">
                         <hr class="star-primary">
                         
-                        <h2>Selected Publications <a href="https://scholar.google.com/citations?user=GopCh2QAAAAJ&hl=en" class="btn btn-primary">All Publications&raquo;</a></h2>
+                        <h2>Selected Publications <a target="_blank" href="https://scholar.google.com/citations?user=GopCh2QAAAAJ&hl=en" class="btn btn-primary">All Publications&raquo;</a></h2>
                         <h4>
                             <span class="label label-warning">
                                 <a target="_blank" href="https://en.wikipedia.org/wiki/H-index"><font color=white>h-index</font></a>: 25
@@ -358,16 +358,9 @@
                         <hr class="star-primary">
                         <h2>Courses <a href="cv.html#SECTION000110000000000000000" class="btn btn-primary">More &raquo;</a></h2>
                         <ul>
-                            <li><span class="label label-success">EPL646</span> <a href="https://www.cs.ucy.ac.cy/~dzeina/courses/epl646/">Advanced Topics in Databases</a> (Winter)</li>
-                            <li><span class="label label-default">EPL446</span> <a target="_blank" href="https://www.cs.ucy.ac.cy/~dzeina/courses/epl446/">Advanced Database Systems</a></li>
-                            <li><span class="label label-success">EPL371</span> <a href="https://www.cs.ucy.ac.cy/~dzeina/courses/epl371">Systems Programming</a> (Spring) </li>
-                            <li><span class="label label-default">EPL342</span> <a target="_blank" href="https://www.cs.ucy.ac.cy/~dzeina/courses/epl342/">Databases</a></li>
-                            <li><span class="label label-success">EPL232</span> <a href="https://www.cs.ucy.ac.cy/~dzeina/courses/epl232">Programming Techniques and Tools</a> (Winter) [formely EPL132]</li>
-                            <li><span class="label label-default">EPL111</span> <a target="_blank" href="https://www.cs.ucy.ac.cy/~dzeina/courses/epl111">Discrete Structures in Computer Science and Computation</a></li>
-                            <li><span class="label label-default">EPL035</span> <a target="_blank" href="https://www.cs.ucy.ac.cy/~dzeina/courses/epl035">Data Structures and Algorithms for ECE</a></li>
-                            <li><span class="label label-default">EPL032</span> <a target="_blank" href="https://www.cs.ucy.ac.cy/~dzeina/courses/epl032">Introduction to Programming and Problem Solving</a></li>
-                            <li><span class="label label-default">EPL003</span> Computer Science and Information Systems</li>
-                            <li><span class="label label-default">EPL001</span> Introduction to Computer Science</li>
+                            <li><span class="label label-default">CAP4103/CAP6101</span> Mobile Biometrics <font color="red">(F'20, F'21, F'22)</font></li>
+                            <li><span class="label label-default">CIS4930/CIS6930</span> Biometric Authentication on Mobile Devices <font color="red">(F'18, F'19)</font></li>
+                            <li><span class="label label-default">COP3331</span> Object Oriented Software Design <font color="red">(Spr'19, Spr'20, Spr'21)</font></li>
                         </ul>
                     </div>
                 </div>
