--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                     </b>
                     <div class="allshow" style="display:none;" id="tab-courses-content">
                         <hr class="star-primary">
-                        <h2>Courses <a href="cv.html#SECTION000110000000000000000" class="btn btn-primary">More &raquo;</a></h2>
+                        <h2>Courses</h2>
                         <ul>
                             <li><span class="label label-default">CAP4103/CAP6101</span> Mobile Biometrics <font color="red">(F'20, F'21, F'22)</font></li>
                             <li><span class="label label-default">CIS4930/CIS6930</span> Biometric Authentication on Mobile Devices <font color="red">(F'18, F'19)</font></li>
