--- a/index.html
+++ b/index.html
@@ -251,23 +251,20 @@
                         <h2>Selected Publications <a target="_blank" href="https://scholar.google.com/citations?user=GopCh2QAAAAJ&hl=en" class="btn btn-primary">All Publications&raquo;</a></h2>
                         <h4>
                             <span class="label label-warning">
-                                <a target="_blank" href="https://en.wikipedia.org/wiki/H-index"><font color=white>h-index</font></a>: 25
+                                <a target="_blank" href="https://en.wikipedia.org/wiki/H-index"><font color=white>h-index</font></a>: 6
                             </span>&nbsp;
                             <span class="label label-warning">
-                                <a target="_blank" href="https://scholar.google.com/citations?user=HCxwGIkAAAAJ&hl=en"><font color=white>Citations</font></a>: 2867
-                            </span>&nbsp;
-                            <span class="label label-warning">
-                                <a target="_blank" href="https://en.wikipedia.org/wiki/Erd&ouml;s_number"><font color="white">Erd&ouml;s #</font></a>: 3
+                                <a target="_blank" https://scholar.google.com/citations?user=GopCh2QAAAAJ&hl=en"><font color=white>Citations</font></a>: 319
                             </span>&nbsp;
                             <span class="label label-default">
-                                <a target="_blank" href="https://orcid.org/0000-0002-7239-2387"><font color="white">ORCID</font></a>
+                                <a target="_blank" href="https://orcid.org/0000-0002-6807-6277"><font color="white">ORCID</font></a>
                             </span>&nbsp;
                             <span class="label label-default">
-                                <a target="_blank" href="https://www.scopus.com/authid/detail.uri?authorId=35176841800"><font color="white">Scopus</font></a>
+                                <a target="_blank" href="https://www.scopus.com/authid/detail.uri?authorId=57188763465"><font color="white">Scopus</font></a>
                             </span>&nbsp;
-                            <span class="label label-default">
+                            <!--<span class="label label-default">
                                 <a target="_blank" href="https://www.researcherid.com/rid/O-2301-2016"><font color="white">ResearcherID</font></a>
-                            </span>
+                            </span>-->
                             
                             
                         </h4>
