--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                 <li><a onclick="javascript:reset_menus();$('#tab-intro-content').show();" href="#intro">Introduction</a></li>
                                 <!--<li><a href="bio.html">Biography</a></li>-->
                                 <!--<li><a href="cv.html">CV (Web)</a></li>-->
-                                <li><a target="_blank" href="zeinalipour.pdf">CV (PDF)</a></li>
+                                <li><a target="_blank" href="neal.pdf">CV (PDF)</a></li>
                             </ul>
                         </li>
                         <li class="page-scroll">
