--- a/index.html
+++ b/index.html
@@ -355,10 +355,12 @@
                         <hr class="star-primary">
                         <h2>Courses</h2>
                         <ul>
-                            <li><span class="label label-default">CAP4103/CAP6101</span> Mobile Biometrics <font color="red">(F'20, F'21, F'22)</font></li>
-                            <li><span class="label label-default">CIS4930/CIS6930</span> Biometric Authentication on Mobile Devices <font color="red">(F'18, F'19)</font></li>
-                            <li><span class="label label-default">COP3331</span> Object Oriented Software Design <font color="red">(Spr'19, Spr'20, Spr'21)</font></li>
-                        </ul>
+                            <li><span class="label label-success">CAP4103</span> Mobile Biometrics <font color="red">(F'20, F'21, F'22)</font></li>
+                            <li><span class="label label-success">CAP6101</span> Mobile Biometrics <font color="red">(F'20, F'21, F'22)</font></li>
+                            <li><span class="label label-success">CIS4930</span> Biometric Authentication on Mobile Devices <font color="red">(F'18, F'19)</font></li>
+                            <li><span class="label label-success">CIS6930</span> Biometric Authentication on Mobile Devices <font color="red">(<a target="_blank" href="courses/6930-F18.pdf">F'18</a>, <a target="_blank" href="courses/6930-F19">F'19</a>)</font></li>
+                            <li><span class="label label-success">COP3331</span> Object Oriented Software Design <font color="red">(Spr'19, Spr'20, Spr'21)</font></li>
+                        </ul> 
                     </div>
                 </div>
             </div>
