--- a/index.html
+++ b/index.html
@@ -355,11 +355,11 @@
                         <hr class="star-primary">
                         <h2>Courses</h2>
                         <ul>
-                            <li><span class="label label-success">CAP4103</span> Mobile Biometrics <font color="red">(F'20, F'21, F'22)</font></li>
-                            <li><span class="label label-success">CAP6101</span> Mobile Biometrics <font color="red">(F'20, F'21, F'22)</font></li>
-                            <li><span class="label label-success">CIS4930</span> Biometric Authentication on Mobile Devices <font color="red">(F'18, F'19)</font></li>
-                            <li><span class="label label-success">CIS6930</span> Biometric Authentication on Mobile Devices <font color="red">(<a target="_blank" href="courses/6930-F18.pdf">F'18</a>, <a target="_blank" href="courses/6930-F19">F'19</a>)</font></li>
-                            <li><span class="label label-success">COP3331</span> Object Oriented Software Design <font color="red">(Spr'19, Spr'20, Spr'21)</font></li>
+                            <li><span class="label label-success">CAP4103</span> Mobile Biometrics (F'20, F'21, F'22)</li>
+                            <li><span class="label label-success">CAP6101</span> Mobile Biometrics (F'20, F'21, F'22)</li>
+                            <li><span class="label label-success">CIS4930</span> Biometric Authentication on Mobile Devices (F'18, F'19)</li>
+                            <li><span class="label label-success">CIS6930</span> Biometric Authentication on Mobile Devices (<a target="_blank" href="courses/6930-F18.pdf">F'18</a>, <a target="_blank" href="courses/6930-F19">F'19</a>)</li>
+                            <li><span class="label label-success">COP3331</span> Object Oriented Software Design (Spr'19, Spr'20, Spr'21)</li>
                         </ul> 
                     </div>
                 </div>
