--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                             <li><span class="label label-success">CAP4103</span> Mobile Biometrics (F'20, F'21, F'22)</li>
                             <li><span class="label label-success">CAP6101</span> Mobile Biometrics (F'20, F'21, F'22)</li>
                             <li><span class="label label-success">CIS4930</span> Biometric Authentication on Mobile Devices (F'18, F'19)</li>
-                            <li><span class="label label-success">CIS6930</span> Biometric Authentication on Mobile Devices (<a target="_blank" href="courses/6930-F18.pdf">F'18</a>, <a target="_blank" href="courses/6930-F19">F'19</a>)</li>
+                            <li><span class="label label-success">CIS6930</span> Biometric Authentication on Mobile Devices (<a target="_blank" href="courses/6930-F18.pdf">F'18</a>, <a target="_blank" href="courses/6930-F19.pdf">F'19</a>)</li>
                             <li><span class="label label-success">COP3331</span> Object Oriented Software Design (Spr'19, Spr'20, Spr'21)</li>
                         </ul> 
                     </div>
@@ -421,11 +421,11 @@
                         <span class="label label-success">Editorial Boards</span>
                         
                         <ul>
-                            <li><b>Associate Editor</b>, <a target="_blank" href="https://link.springer.com/journal/10619"><b> Distributed and Parallel Databases</b></a> journal, Editors-in-Chief: <a target="_blank" href="http://www-users.cs.umn.edu/~mokbel/">Mohamed Mokbel</a> and <a target="_blank" href="hhttps://www.cs.ucsb.edu/~agrawal/">Divyakant Agrawal</a>, <b>Springer US Press</b>, NY, USA. (05/2017 - 04/2023)
-                                <br><img width="200" src="images/springer.png"/>
+                            <li><b>Associate Editor</b>, ICPR 2022 Track 4: Biometrics and Human-Computer Interaction at the 26th International Conference on Pattern Recognition (ICPR 2022)
                             </li>
-                            <li><b>Associate Editor</b>, <a target="_blank" href="http://www.journals.elsevier.com/big-data-research"><b>Big Data Research</b></a> journal, Editors-in-Chief: Z. Wu, <a target="_blank" href="http://www.mi.parisdescartes.fr/~themisp/">Themis Palpanas</a>, <b>Elsevier Press</b>, Amsterdam, Netherlands. (04/2016 - current)
-                                <br><img width="100" src="images/elsevier.png"/>
+                            <li><b>Guest Editor</b>, MDPI Electronics Special Issue on Recent Advances in Biometric Security in IoT Based on Machine Learning (2021 – Current)
+                            </li>
+                            <li> <b>Associate Editor</b>, IEEE Biometrics Council Newsletter (2019 – Current)
                             </li>
                         </ul>
                         </span>
