--- a/index.html
+++ b/index.html
@@ -435,13 +435,7 @@
                         <span class="label label-success">Conference Committees</span>
                         <ul>
                             <li>
-                                <b>ACM SIGMOD:</b>
-                                <a href="http://www.sigmod2018.org/org_sigmod_demo_pc.shtml" target="_blank"><b>2018</b></a>,
-                                <a href="http://www.sigmod2015.org/org_sigmod_pc.shtml" target="_blank">2015</a>,
-                                <a href="http://www.sigmod2014.org/org_sigmod_demo_pc.shtml" target="_blank">2014</a>,
-                                <a href="http://www.sigmod.org/2013/org_sigmod_demo_pc.shtml" target="_blank">2013</a>,
-                                <a href="http://www.sigmod.org/2012/org_sigmod_demo_pc.shtml" target="_blank">2012</a>
-                                <i>[ACM's Management of Data Conference]</i>
+                             <b>Program Committee</b>, 24th ACM International Conference on Multimodal Interaction (ICMI 2022)
                             </li>
                             <li>
                                 <b>VLDB:</b>
