--- a/index.html
+++ b/index.html
@@ -516,24 +516,28 @@ Privacy and Security at the Conference on Computer Vision and Pattern Recognitio
                         <hr class="star-primary">
                         <h2>Advising</h2>
                         <ul>
-                            <li>
-                                <span class="label label-success">Postdoc</span> <a target="_blank" href="https://www.cs.ucy.ac.cy/~gchatzim/">George Chatzimilioudis</a>, Researcher at MTN, Cyprus.
+                          
+                           <li>
+                                <span class="label label-info">Ph.D.</span> (ongoing) Parush Gera
                             </li>
-                            <li>
-                                <span class="label label-success">Postdoc</span> <a target="_blank" href="http://staff.frederick.ac.cy//com.ca/AndreasConstantinides/">Andreas Konstantinidis</a>, Lecturer at Frederick University, Cyprus.
+		      <li>
+                                <span class="label label-info">Ph.D.</span> (ongoing) Meghna Chaudhary
                             </li>
-                            <li>
-                                <span class="label label-success">Postdoc</span> <a target="_blank" href="http://www2.ucy.ac.cy/~laoudias/">Christos Laoudias</a>, Researcher at KIOS Research Center, Cyprus.
+			      <li>
+                                <span class="label label-info">Ph.D.</span> (ongoing) Sayde King
                             </li>
-                            <li>
-                                <span class="label label-success">Ph.D.</span> (completed) <a target="_blank" href="http://www.uclancyprus.ac.cy/en/courses/school-sciences/academics/panayiotis-andreou">Panayiotis Andreou</a>, Assistant Professor at University of Central Lancashire, Cyprus. </span>
+			      <li>
+                                <span class="label label-info">Ph.D.</span> (ongoing) Mohamed Ebraheem
                             </li>
-                            <li>
-                                <span class="label label-success">Ph.D.</span> (completed) <a target="_blank" href="https://www.cs.ucy.ac.cy/~cs07cc6/">Constantinos Costa</a>, Instructor/Researcher, University of Cyprus, Cyprus.
+							      <li>
+                                <span class="label label-info">Ph.D.</span> (ongoing) Wilson Lozano
                             </li>
-                           <!-- <li>
-                                <span class="label label-info">Ph.D.</span> (ongoing) <a target="_blank" href="https://www.cs.ucy.ac.cy/~glarko01/">Georgios Larkou</a>, University of Cyprus, Cyprus.
-                            </li>-->
+			 <li>
+                                <span class="label label-info">Ph.D.</span> (completed) Steven Diaz Hernandez
+                            </li>
+							      <li>
+                                <span class="label label-info">M.S.</span> (completed) Khadija Zanna
+                            </li>
                         </ul>
                     </div>
                 </div>
