--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                                 Home<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a onclick="javascript:reset_menus();$('#tab-intro-content').show();" href="#intro">Introduction</a></li>
+                                <!--<li><a onclick="javascript:reset_menus();$('#tab-intro-content').show();" href="#intro">Introduction</a></li>-->
                                 <!--<li><a href="bio.html">Biography</a></li>-->
                                 <!--<li><a href="cv.html">CV (Web)</a></li>-->
                                 <li><a target="_blank" href="neal.pdf">CV (PDF)</a></li>
@@ -88,7 +88,7 @@
 			    <!--
                         <li class="page-scroll">
                             <a onclick="javascript:reset_menus();$('#tab-systems-content').show();" href="#systems">Systems</a>
-                        </li>
+                        </li>-->
                         <li class="page-scroll">
                             <a onclick="javascript:reset_menus();$('#tab-service-content').show();" href="#service">Service</a>
                         </li>
