--- a/index.html
+++ b/index.html
@@ -533,10 +533,10 @@ Privacy and Security at the Conference on Computer Vision and Pattern Recognitio
                                 <span class="label label-info">Ph.D.</span> (ongoing) Wilson Lozano
                             </li>
 			 <li>
-                                <span class="label label-info">Ph.D.</span> (completed) Steven Diaz Hernandez
+                                <span class="label label-success">Ph.D.</span> (completed) Steven Diaz Hernandez
                             </li>
 							      <li>
-                                <span class="label label-info">M.S.</span> (completed) Khadija Zanna
+                                <span class="label label-success">M.S.</span> (completed) Khadija Zanna
                             </li>
                         </ul>
                     </div>
