--- a/index.html
+++ b/index.html
@@ -55,16 +55,7 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                                Home<span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <!--<li><a onclick="javascript:reset_menus();$('#tab-intro-content').show();" href="#intro">Introduction</a></li>-->
-                                <!--<li><a href="bio.html">Biography</a></li>-->
-                                <!--<li><a href="cv.html">CV (Web)</a></li>-->
-                                <li><a target="_blank" href="neal.pdf">CV (PDF)</a></li>
-                            </ul>
-                        </li>
+			   <li><a href="cv.html">CV (Web)</a></li>
                         <li class="page-scroll">
                             <a onclick="javascript:reset_menus();$('#tab-news-content').show();" href="#news">News</a>
                         </li>
