--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-			   <li><a href="cv.html">CV (Web)</a></li>
+			   <li><a href="neal.pdf">CV (PDF)</a></li>
                         <li class="page-scroll">
                             <a onclick="javascript:reset_menus();$('#tab-news-content').show();" href="#news">News</a>
                         </li>
@@ -191,7 +191,7 @@
                         
                         <!--<p><a href="bio.html" class="btn-sm btn-primary">Biography &raquo;</a>
                         <a href="cv.html" class="btn-sm btn-primary">CV (Web)&raquo;</a>-->
-                        <a href="zeinalipour.pdf" class="btn-sm btn-primary">CV (PDF)&raquo;</a>
+                        <a href="neal.pdf" class="btn-sm btn-primary">CV (PDF)&raquo;</a>
                     </div>
                     
                 </div>
