--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <span><a href="#"><img border="0" width="170" src="images/csucy.png"/></a></span>
+                    <span><a href="#home">Tempestt J. Neal, Ph.D.</a></span>
                 </div>
                 
                 <!-- Collect the nav links, forms, and other content for toggling -->
