--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <!--<span><a href="#home">Tempestt J. Neal, Ph.D.</a></span>-->
+                    <span><a href="#home"><img src="images/logo.png"></a></span>
                 </div>
                 
                 <!-- Collect the nav links, forms, and other content for toggling -->
