--- a/index.html
+++ b/index.html
@@ -352,11 +352,11 @@
                         <hr class="star-primary">
                         <h2>Courses</h2>
                         <ul>
-                            <li><span class="label label-success">CAP4103</span> Mobile Biometrics (F'20, F'21, F'22)</li>
-                            <li><span class="label label-success">CAP6101</span> Mobile Biometrics (F'20, F'21, F'22)</li>
-                            <li><span class="label label-success">CIS4930</span> Biometric Authentication on Mobile Devices (F'18, F'19)</li>
+                            <li><span class="label label-success">CAP4103</span> Mobile Biometrics (<a target="_blank" href="courses/4103-F20.pdf">F'20</a>, <a target="_blank" href="courses/4103-F21.pdf">F'21</a>, <a target="_blank" href="courses/4103-F22.pdf">F'22</a>)</li>
+                            <li><span class="label label-success">CAP6101</span> Mobile Biometrics (<a target="_blank" href="courses/6101-F20.pdf">F'20</a>, <a target="_blank" href="courses/6101-F21.pdf">F'21</a>, <a target="_blank" href="courses/6101-F22.pdf">F'22</a>)</li>
+                            <li><span class="label label-success">CIS4930</span> Biometric Authentication on Mobile Devices (<a target="_blank" href="courses/4930-F18.pdf">F'18</a>, <a target="_blank" href="courses/4930-F19.pdf">F'19</a>)</li>
                             <li><span class="label label-success">CIS6930</span> Biometric Authentication on Mobile Devices (<a target="_blank" href="courses/6930-F18.pdf">F'18</a>, <a target="_blank" href="courses/6930-F19.pdf">F'19</a>)</li>
-                            <li><span class="label label-success">COP3331</span> Object Oriented Software Design (Spr'19, Spr'20, Spr'21)</li>
+                            <li><span class="label label-success">COP3331</span> Object Oriented Software Design (<a target="_blank" href="courses/3331-S19.pdf">Spr'19</a>, <a target="_blank" href="courses/3331-S20.pdf">Spr'20</a>, <a target="_blank" href="courses/3331-S21.pdf">Spr'21</a>)</li>
                         </ul> 
                     </div>
                 </div>
