--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
 			   <li><a target="_blank" href="neal.pdf">CV (PDF)</a></li>
+			  <li><a target="_blank" href="https://tempestt-neal.github.io/ciber/">Research</a></li>
+
                         <li class="page-scroll">
                             <a onclick="javascript:reset_menus();$('#tab-news-content').show();" href="#news">News</a>
                         </li>
