--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                          1678 Nicosia, CYPRUS<br>-->
                         Tel/Fax: <a target="_blank" href="tel:18133969353">(813)396-9353</a> <br/>
                         Email: tjneal AT usf DOT edu<br/>
-                        Lab: <a target="_blank" href="https://dmsl.cs.ucy.ac.cy/">Cyber Identity and Behavior Research Lab (CIBeR)</a><br>
+                        Lab: <a target="_blank" href="https://tempestt-neal.github.io/ciber/">Cyber Identity and Behavior Research Lab (CIBeR)</a><br>
                         Directions: <a target="_blank" href="https://goo.gl/maps/ApRy94Ci57n3USYZ8">https://goo.gl/maps/ApRy94Ci57n3USYZ8</a>
                     </h4>
                     <h4><i>Expertise: Biometrics &amp; Smart Sensing </i> <a href="#intro" onclick="javascript:reset_menus();$('#tab-intro-content').show();" class="btn-primary btn-xs">&raquo;</a><br></h4>
