--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                         <hr class="star-primary">
                         <h2>Courses</h2>
                         <ul>
-                            <li><span class="label label-success">CAP4103</span> Mobile Biometrics (<a target="_blank" href="courses/4103-F20.pdf">F'20</a>, <a target="_blank" href="courses/4103-F21.pdf">F'21</a>, <a target="_blank" href="courses/4103 - F22.pdf">F'22</a>)</li>
+                            <li><span class="label label-success">CAP4103</span> Mobile Biometrics (<a target="_blank" href="courses/4103-F20.pdf">F'20</a>, <a target="_blank" href="courses/4103-F21.pdf">F'21</a>, <a target="_blank" href="courses/4103 - F22.pdf">F'22</a>) <a target="_blank" href="courses/MobileBiometricsOverview.pdf">Read more about this class.</a></li>
                             <li><span class="label label-success">CAP6101</span> Mobile Biometrics (<a target="_blank" href="courses/6101-F20.pdf">F'20</a>, <a target="_blank" href="courses/6101-F21.pdf">F'21</a>, <a target="_blank" href="courses/6101 - F22.pdf">F'22</a>)</li>
                             <li><span class="label label-success">CIS4930</span> Biometric Authentication on Mobile Devices (<a target="_blank" href="courses/4930-F18.pdf">F'18</a>, <a target="_blank" href="courses/4930-F19.pdf">F'19</a>)</li>
                             <li><span class="label label-success">CIS6930</span> Biometric Authentication on Mobile Devices (<a target="_blank" href="courses/6930-F18.pdf">F'18</a>, <a target="_blank" href="courses/6930-F19.pdf">F'19</a>)</li>
