--- a/index.html
+++ b/index.html
@@ -526,6 +526,9 @@ Privacy and Security at the Conference on Computer Vision and Pattern Recognitio
 							      <li>
                                 <span class="label label-info">Ph.D.</span> (ongoing) Wilson Lozano
                             </li>
+				 <li>
+                                <span class="label label-info">Ph.D.</span> (ongoing) Hoorad Abootalebi
+                            </li>
 			 <li>
                                 <span class="label label-success">Ph.D.</span> (completed) Steven Diaz Hernandez
                             </li>
