--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                         <ul>
                             <li>
 			 <b>Organizer</b> First Workshop on Interdisciplinary Applications of Biometrics and Identity Science (<a href="https://cse.usf.edu/~tjneal/InterID2023/" target="_blank">InterID
-2023</a>) at FG 2023</li>
+2023</a>) at FG 2023</li>: <a href="https://usf.box.com/s/e3xm642wc339kimc1mjhecjr1h6nn2su" target="_blank">Download workshop slides.</a>
 			 <li> <b>Program Committee</b>, Mediate 2022 at the 16th International AAAI Conference on Web and Social Media
 			 (ICWSM 2022)</li>
 
