--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			  <li><a target="_blank" href="https://tempestt-neal.github.io/ciber/">Research</a></li>
 
                         <li class="page-scroll">
-                            <a onclick="javascript:reset_menus();$('#tab-news-content').show();" href="#news">News</a>
+                            <a onclick="javascript:reset_menus();$('#tab-news-content').show();" href="https://tempestt-neal.github.io/ciber/allnews.html">News</a>
                         </li>
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
