--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-			   <li><a target="_blank" href="neal.pdf">CV (PDF)</a></li>
+			   <li><a target="_blank" href="Neal_CV.pdf">CV (PDF)</a></li>
 			  <li><a target="_blank" href="https://tempestt-neal.github.io/ciber/">Research</a></li>
 
                         <li class="page-scroll">
