--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                         
                         <!--<p><a href="bio.html" class="btn-sm btn-primary">Biography &raquo;</a>
                         <a target="_blank" href="cv.html" class="btn-sm btn-primary">CV (Web)&raquo;</a>-->
-                        <a target="_blank" href="neal.pdf" class="btn-sm btn-primary">CV (PDF)&raquo;</a>
+                        <a target="_blank" href="Neal_CV.pdf" class="btn-sm btn-primary">CV (PDF)&raquo;</a>
                     </div>
                     
                 </div>
