--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
         <section  name="home" id="home" style="margin-top:40px">
             <div class="container">
                 <div align="left" class="col-md-3">
-                    <a target="_blank" href="images/neal.png">
-                        <img id="mobile-img" src="images/neal.png" width="250" border="0" height="250" alt=""></a>
+                    <a target="_blank" href="images/neal_small.jpeg">
+                        <img id="mobile-img" src="images/neal_small.jpeg" width="200" border="0" height="250" alt=""></a>
                 </div>
                 <div align="left" class="col-md-4">
                     <h2>Tempestt Neal
