--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         Lab: <a target="_blank" href="https://tempestt-neal.github.io/ciber/">Cyber Identity and Behavior Research Lab (CIBeR)</a><br>
                         Directions: <a target="_blank" href="https://goo.gl/maps/ApRy94Ci57n3USYZ8">https://goo.gl/maps/ApRy94Ci57n3USYZ8</a>
                     </h4>
-                    <h4><i>Expertise: Biometrics &amp; Smart Sensing </i> <a href="#intro" onclick="javascript:reset_menus();$('#tab-intro-content').show();" class="btn-primary btn-xs">&raquo;</a><br></h4>
+                    <h4><i>Expertise: TEST Biometrics &amp; Smart Sensing </i> <a href="#intro" onclick="javascript:reset_menus();$('#tab-intro-content').show();" class="btn-primary btn-xs">&raquo;</a><br></h4>
                     
                 </div>
 
