--- a/index.html
+++ b/index.html
@@ -58,16 +58,10 @@
 			   <li><a target="_blank" href="Neal_CV.pdf">CV (PDF)</a></li>
 			  <li><a target="_blank" href="https://tempestt-neal.github.io/ciber/">Research</a></li>
 
-			    <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                                Research<span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a onclick="javascript:reset_menus();$('#tab-publications-content').show();" href="#news">Lab News</a></li>
-                            </ul>
-                        </li>
+			   
 
                         <li class="page-scroll">
-                            <a onclick="javascript:reset_menus();$('#tab-news-content').show();" href="https://tempestt-neal.github.io/ciber/allnews.html">News</a>
+                            <a onclick="javascript:reset_menus();$('#tab-news-content').show();" href="ciber.html">Research</a>
                         </li>
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
