--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			   
 
                         <li class="page-scroll">
-                            <a onclick="javascript:reset_menus();$('#tab-news-content').show();" href="ciber.html">Research</a>
+                            <a onclick="javascript:reset_menus();$('#tab-news-content').show();" href="research.html">Research</a>
                         </li>
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
