--- a/research.html
+++ b/research.html
@@ -47,9 +47,8 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                <ul class="nav navbar-nav navbar-right">
                   <li><a target="_blank" href="Neal_CV.pdf">CV (PDF)</a></li>
-                  <li><a target="_blank" href="https://tempestt-neal.github.io/ciber/">Research</a></li>
                   <li class="page-scroll">
-                     <a onclick="javascript:reset_menus();$('#tab-news-content').show();" href="ciber.html">Research</a>
+                     <a onclick="javascript:reset_menus();$('#tab-news-content').show();" href="research.html">Research</a>
                   </li>
                   <li class="dropdown">
                      <a class="dropdown-toggle" data-toggle="dropdown" href="#">
