--- a/research.html
+++ b/research.html
@@ -46,36 +46,16 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                <ul class="nav navbar-nav navbar-right">
-                  <li><a target="_blank" href="Neal_CV.pdf">CV (PDF)</a></li>
+                  <li><a target="_blank" href="index.pdf">Home</a></li>
                   <li class="page-scroll">
                      <a onclick="javascript:reset_menus();$('#tab-news-content').show();" href="research.html">Research</a>
                   </li>
-                  <li class="dropdown">
-                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                     Publications<span class="caret"></span></a>
-                     <ul class="dropdown-menu">
-                        <li><a onclick="javascript:reset_menus();$('#tab-publications-content').show();" href="#publications">Selected</a></li>
-                        <li><a target="_blank" href="https://scholar.google.com/citations?user=GopCh2QAAAAJ&hl=en">All</a></li>
-                     </ul>
-                  </li>
-                  <!--<li class="page-scroll">
-                     <a onclick="javascript:reset_menus();$('#tab-awards-content').show();" href="#awards">Awards</a>
-                     </li>
-                     <li class="page-scroll">
-                     <a href="talks/">Talks</a>
-                     </li>-->
-                  <li class="page-scroll">
-                     <a onclick="javascript:reset_menus();$('#tab-courses-content').show();" href="#courses">Courses</a>
-                  </li>
-                  <!--
-                     <li class="page-scroll">
-                         <a onclick="javascript:reset_menus();$('#tab-systems-content').show();" href="#systems">Systems</a>
-                     </li>-->
-                  <li class="page-scroll">
-                     <a onclick="javascript:reset_menus();$('#tab-service-content').show();" href="#service">Service</a>
+                  <li><a target="_blank" href="https://scholar.google.com/citations?user=GopCh2QAAAAJ&hl=en">Google Scholar</a></li>
+                   <li class="page-scroll">
+                     <a onclick="javascript:reset_menus();$('#tab-courses-content').show();" href="#members">Members</a>
                   </li>
                   <li class="page-scroll">
-                     <a onclick="javascript:reset_menus();$('#tab-advising-content').show();" href="#advising">Advising</a>
+                     <a onclick="javascript:reset_menus();$('#tab-courses-content').show();" href="#news">News</a>
                   </li>
                   <li class="page-scroll">
                      <a onclick="javascript:reset_menus();$('#tab-contact-content').show();" href="#contact">Contact</a>
@@ -200,46 +180,7 @@
             </div>
          </section>
       </div>
-      <!-- Research Section -->
-      <section  name="publications" id="publications">
-         <div class="container lead">
-            <div style="text-align: left; margin-top:10px" class="col-md-12">
-               <b class="noshow" style="display:none;" id="tab-3">
-               <button class="btn btn-default btn-lg btn-block" style="display: block; width: 100%;" onclick="javascript:$('#tab-publications-content').toggle();">Publications  <span class="glyphicon glyphicon-chevron-down"></span></button>
-               </b>
-               <div class="allshow" style="display:none;" id="tab-publications-content">
-                  <hr class="star-primary">
-                  <h2>Selected Publications <a target="_blank" href="https://scholar.google.com/citations?user=GopCh2QAAAAJ&hl=en" class="btn btn-primary">All Publications&raquo;</a></h2>
-                  <h4>
-                     <span class="label label-warning">
-                     <a target="_blank" href="https://en.wikipedia.org/wiki/H-index"><font color=white>h-index</font></a>: 6
-                     </span>&nbsp;
-                     <span class="label label-warning">
-                     <a target="_blank"  href="https://scholar.google.com/citations?user=GopCh2QAAAAJ&hl=en"><font color=white>Citations</font></a>: 319
-                     </span>&nbsp;
-                     <span class="label label-default">
-                     <a target="_blank" href="https://orcid.org/0000-0002-6807-6277"><font color="white">ORCID</font></a>
-                     </span>&nbsp;
-                     <span class="label label-default">
-                     <a target="_blank" href="https://www.scopus.com/authid/detail.uri?authorId=57188763465"><font color="white">Scopus</font></a>
-                     </span>&nbsp;
-                     <!--<span class="label label-default">
-                        <a target="_blank" href="https://www.researcherid.com/rid/O-2301-2016"><font color="white">ResearcherID</font></a>
-                        </span>-->
-                  </h4>
-                  <ul>
-                     <li><span class="label label-success">ACM CSUR'17</span> Tempestt Neal, Kalaivani Sundararajan, Aneez Fatima, Yiming Yan, Yingfei Xiang, and Damon Woodard. 2017. <a target="_blank" href="https://dl.acm.org/doi/abs/10.1145/3132039">Surveying Stylometry Techniques and Applications.</a> ACM Comput. Surv. 50, 6, Article 86 (November 2018), 36 pages. https://doi.org/10.1145/3132039</li>
-                     <li><span class="label label-success">JPRR '16</span> Neal, T. J., & Woodard, D. L. (2016). <a target="_blank" href="http://jprr.org/index.php/jprr/article/view/764">Surveying Biometric Authentication for Mobile Device Security.</a> Journal of Pattern Recognition Research, 1, 74-110.</li>
-                     <li><span class="label label-success">IEEE BTAS'15</span> T. J. Neal, D. L. Woodard and A. D. Striegel, <a target="_blank" href="https://doi.org/10.1109/BTAS.2015.7358777">"Mobile device application, Bluetooth, and Wi-Fi usage data as behavioral biometric traits,"</a> 2015 IEEE 7th International Conference on Biometrics Theory, Applications and Systems (BTAS), 2015, pp. 1-6, doi: 10.1109/BTAS.2015.7358777.</li>
-                     <li><span class="label label-success">IEEE ICB'18</span> T. Neal, K. Sundararajan and D. Woodard, <a target="_blank" href="https://doi.org/10.1109/ICB2018.2018.00048">"Exploiting Linguistic Style as a Cognitive Biometric for Continuous Verification,"</a> 2018 International Conference on Biometrics (ICB), 2018, pp. 270-276, doi: 10.1109/ICB2018.2018.00048.</li>
-                     <li><span class="label label-success">IEEE TBIOM'19</span> T. J. Neal and D. L. Woodard, <a target="_blank" href="https://doi.org/10.1109/TBIOM.2019.2905868">"You Are Not Acting Like Yourself: A Study on Soft Biometric Classification, Person Identification, and Mobile Device Use,"</a> in IEEE Transactions on Biometrics, Behavior, and Identity Science, vol. 1, no. 2, pp. 109-122, April 2019, doi: 10.1109/TBIOM.2019.2905868.</li>
-                     <li><span class="label label-success">IEEE IJCB'17</span> T. J. Neal and D. L. Woodard, <a target="_blank" href="https://doi.org/10.1109/BTAS.2017.8272684">"Using associative classification to authenticate mobile device users,"</a> 2017 IEEE International Joint Conference on Biometrics (IJCB), 2017, pp. 71-79, doi: 10.1109/BTAS.2017.8272684.</li>
-                  </ul>
-                  </p>
-               </div>
-            </div>
-         </div>
-      </section>
+
       <!-- Courses Section -->
       <!--
          <section  name="awards" id="awards">
@@ -306,49 +247,9 @@
                </b>
                <div class="allshow" style="display:none;" id="tab-courses-content">
                   <hr class="star-primary">
-                  <h2>News</h2>
+                  <h2>Lab News (2024)</h2>
                   <ul>
-                     <h2 id="2023">2023</h2>
-<ul>
-<li>CIBeR student Parush Gera secured internship at Palo Alto Networks as Software Engineer.</li>
-<li>CIBeR student Meghna Chaudhary was awarded a scholarship to attend the CRA-WP Grad Cohort for Women 2023 by the Computing Research Association.</li>
-<li>CIBeR student Meghna Chaudhary secured an internship at Intuit as a Data Scientist.</li>
-<li>Dr. Neal received an NSF CAREER Award for project <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2238389&amp;HistoricalAwards=false">Inclusive Cybersecurity Through the Lens of Accessible Identity and Access Management</a>.</li>
-</ul>
-<h2 id="2022">2022</h2>
-<ul>
-<li>CIBeR student Sayde King the first in the lab to earn Ph.D. candidacy.</li>
-<li>Dr. Neal will be organizing the <a href="https://cse.usf.edu/~tjneal/InterID2023/index.html">First Workshop on Interdisplinary Applications of Biometrics and Identity Science</a> at FG 2023.</li>
-<li>CIBeR student Sayde King was awarded a PhD Employer Fellowship from the National GEM Consortium, sponsored by MIT Lincoln Laboratory.</li>
-<li>CIBeR student Sayde King secured an internship with MIT Lincoln Laboratory.</li>
-<li>CIBeR student Meghna Chaudhary secured an internship at Intuit as a Data Scientist. She was awarded the Courage spotlight award by the team manager.</li>
-<li>Dr. Neal and USF CSE faculty launch the <a href="https://nlp-grp.github.io/">NLP Group</a>.</li>
-<li>CIBeR student Meghna Chaudhary was awarded a scholarship to attend the ACM-TAPIA Conference 2022 by the CSE department at University of South Florida.</li>
-<li>CIBeR student Parush Gera published in Workshop on Evaluation and Comparison of NLP Systems in Association for Computational Linguistics.</li>
-<li>CIBeR student Parush Gera published article in SBP-BRiMS Conference.</li>
-<li>CIBeR student Parush Gera was awarded scholarship for attending ACM-TAPIA Conference 2022 by CSE department at University of South Florida.</li>
-<li>CIBeR student Parush Gera was awarded scholarship for attending SBP-BRiMS Conference 2022 by the chairs to present accepted research article.</li>
-<li>CIBeR student Parush Gera secured internship at Palo Alto Networks as Software Engineer.</li>
-<li>CIBeR student Sayde King was awarded a USF Ambassadors Apple Polishing Award.</li>
-<li>CIBeR student Sayde King was an invited guest on the <a href="https://modernfigurespodcast.com/big-brain-energy-episode-038/">Modern Figures Podcast</a>. </li>
-<li>CIBeR student Hoorad Abootalebi was elected as the President of the Institute of Transportation Engineers Student Chapter at USF.</li>
-</ul>
-<h1 id="2021">2021</h1>
-<ul>
-<li>CIBeR student Sayde King was selected as a FL-AGEP Scholar Research Bootcamp Attendee.</li>
-<li>CIBeR student Sayde King secured an internship with Pacific Northwest National Lab.</li>
-<li>CIBeR student Sayde King was selected as an intern by the Air Force Research Laboratory.</li>
-<li>CIBeR student Sayde King was awarded a scholarship to attend the CRA-WP Grad Cohort for Women Workshop.</li>
-</ul>
-<h1 id="2019">2019</h1>
-<ul>
-<li>CIBeR student Sayde King was awarded a scholarship to attend the 26th Annual Institute on Teaching and Mentoring.</li>
-<li>CIBeR student Sayde King was awarded the Alfred P. Sloan Foundation Minority PhD Program Scholarship.</li>
-</ul>
-<h1 id="2018">2018</h1>
-<ul>
-<li>Dr. Neal joins USF and starts the Cyber Identity and Behavior Research Lab (CIBeR) in the Computer Science and Engineering department.</li>
-</ul>
+
 
                   </ul>
                </div>
@@ -391,94 +292,8 @@
                  </div>
              </div>
          </section> -->
-      <!-- Service Section -->
-      <section name="service" id="service">
-         <div class="container lead">
-            <div style="text-align: left; margin-top:10px" class="col-md-12">
-               <b class="noshow" style="display:none;" id="tab-7">
-               <button class="btn btn-default btn-lg btn-block"  style="display: block; width: 100%;" onclick="javascript:$('#tab-service-content').toggle();">Service  <span class="glyphicon glyphicon-chevron-down"></span></button>
-               </b>
-               <div class="allshow" style="display:none;" id="tab-service-content">
-                  <hr class="star-primary">
-                  <h2>Professional Service </h2>
-                  <p>
-                     <span class="label label-success">Editorial Boards</span>
-                  <ul>
-                     <li><b>Associate Editor</b>, <a href="https://www.icpr2022.com/" target="_blank">ICPR 2022</a> Track 4: Biometrics and Human-Computer Interaction at the 26th International Conference on Pattern Recognition (ICPR 2022)
-                     </li>
-                     <li><b>Guest Editor</b>, <a href="https://www.mdpi.com/journal/electronics/special_issues/Biometric_Security_IoT_ML" target="_blank">MDPI Electronics Special Issue on Recent Advances in Biometric Security in IoT Based on Machine Learning</a> (2021 – Current)
-                     </li>
-                     <li> <b>Associate Editor</b>, <a href="https://ieee-biometrics.org/index.php/publications/newsletter" target="_blank">IEEE Biometrics Council Newsletter</a> (2019 – Current)
-                     </li>
-                  </ul>
-                  </span>
-                  </p>
-                  <p>
-                     <span class="label label-success">Conference Committees</span>
-                  <ul>
-                     <li> <b>Program Committee</b>, 44th <a href="https://www.ieee-security.org/TC/SP2023/" target="_blank">2023 IEEE Symposium on Security and Privacy</a> </li>
-                     <li>
-                        <b>Program Committee</b>, 24th <a href=https://icmi.acm.org/2022/ target="_blank">ACM International Conference on Multimodal Interaction</a> (ICMI 2022)
-                     </li>
-                     <li> <b>Organizer</b>, Special Session on <a href="https://cse.usf.edu/~tjneal/IJCB-IDSG.html" target="_blank">Identity for Social Good</a> at the International Joint Conference on Biometrics
-                        (IJCB 2020) 
-                     </li>
-                     <li><b>Local Arrangements Chair</b>, <a href="http://ieee-biometrics.org/btas2019/" target="_blank">International Conference on Biometrics: Theory, Applications, and Systems</a>
-                        (BTAS 2019)
-                     </li>
-                     <li><b>Session Chair</b>, Novel, Mobile, and Soft Biometrics at the <a href="https://www.icb2019.org/" target="_blank">International Conference on Biometrics</a> (ICB
-                        2019)
-                     </li>
-                  </ul>
-                  <span class="label label-success">Workshop and Symposia Committees</span>
-                  <ul>
-                     <li>
-                        <b>Organizer</b> First Workshop on Interdisciplinary Applications of Biometrics and Identity Science (<a href="https://cse.usf.edu/~tjneal/InterID2023/" target="_blank">InterID
-                        2023</a>) at FG 2023
-                     </li>
-                     : <a href="https://usf.box.com/s/e3xm642wc339kimc1mjhecjr1h6nn2su" target="_blank">Download workshop slides.</a>
-                     <li> <b>Program Committee</b>, Mediate 2022 at the 16th International AAAI Conference on Web and Social Media
-                        (ICWSM 2022)
-                     </li>
-                     <li> <b>Co-Organizer</b>, Workshop on Applied Multimodal Affect Recognition (<a href="https://cse.usf.edu/~tjneal/AMAR2020/" target="_blank">AMAR 2020 at FG 2020</a>, <a href="https://cse.usf.edu/~tjneal/AMAR2021/" target="_blank">AMAR2021
-                        at ACII 2021</a>, <a href="https://cse.usf.edu/~tjneal/AMAR2022/" target="_blank">AMAR2022 at ICPR 2022)</a>
-                     </li>
-                     <li> <b>Co-Organizer</b>, Annual Nelms Workshops on Women in IoT: Leading Through Change. University of
-                        Florida Warren B. Nelms Institute for the Connected World, (<a href="https://iot.institute.ufl.edu/events/women-in-iot-2020/ target="blank">WIoT 2020</a>, <a href="https://iot.institute.ufl.edu/events/women-in-iot-wit-workshop-2021/" target="_blank">WIoT 2021</a>) 
-                     </li>
-                     <li> <b>Technical Program Committee</b>, <a href="https://rprmiworkshop.github.io/iccv2021/" target="_blank">Responsible PR&MI</a> (First International Workshop on Responsible
-                        Pattern Recognition and Machine Intelligence) at the 18th International Conference on Computer Vision
-                        (ICCV 2021)
-                     </li>
-                     <li><b>Program Committee</b>, The Bright and Dark Sides of Computer Vision: Challenges and Opportunities for
-                        Privacy and Security at the Conference on Computer Vision and Pattern Recognition (CVPR) (CV-COPS
-                        2019, CV-COPS 2020)
-                     </li>
-                     <li><b>Program Committee</b>, Workshop on Demographic Variation in the Performance of Biometric Systems
-                        (WACV 2020)
-                     </li>
-                  </ul>
-                  <span class="label label-success">Reviewer</span>
-                  <ul>
-                     <li>
-                        IEEE Transactions on Multi-Scale Computing Systems (2018); 
-                        IEEE Transactions on Biometrics, Behavior, and Identity Science (2018 – 2021); 
-                        IEEE International Conference on Identity, Security, and Behavior Analysis (ISBA 2018); 
-                        IAPR International Conference on Biometrics (ICB 2019); 
-                        ACM Computing Surveys (2019); 
-                        IEEE International Conference on Biometrics: Theory, Applications, and Systems (BTAS 2019); 
-                        International Conference on Acoustics, Speech, and Signal Processing (ICASSP 2020); 
-                        IEEE/IAPR International Joint Conference on Biometrics (IJCB 2021 – 2022);
-                        ACM Transactions on Privacy and Security (2022)
-                     </li>
-                  </ul>
-                  </p>
-               </div>
-            </div>
-         </div>
-      </section>
-      <!-- Courses Section -->
-      <section name="advising" id="advising">
+      
+      <section name="members" id="members">
          <div class="container lead">
             <div style="text-align: left; margin-top:10px" class="col-md-12">
                <b class="noshow" style="display:none;" id="tab-8">
