--- a/research.html
+++ b/research.html
@@ -83,8 +83,8 @@
       <section  name="home" id="home" style="margin-top:40px">
          <div class="container">
             <div align="left" class="col-md-3">
-               <a target="_blank" href="images/neal.small.jpeg">
-               <img id="mobile-img" src="images/neal.small.jpeg" width="200" border="0" height="250" alt=""></a>
+               <a target="_blank" href="images/Ciber-horizontal.png">
+               <img id="mobile-img" src="images/Ciber-horizontal.png" width="75%" border="0" alt=""></a>
             </div>
             <div align="left" class="col-md-4">
                <h2>
