--- a/research.html
+++ b/research.html
@@ -82,29 +82,11 @@
       <!-- Home Section -->
       <section  name="home" id="home" style="margin-top:40px">
          <div class="container">
-            <div align="left" class="col-md-3">
+            <div align="left" class="col-md-12">
                <a target="_blank" href="images/Ciber-horizontal.png">
                <img id="mobile-img" src="images/Ciber-horizontal.png" width="75%" border="0" alt=""></a>
             </div>
-            <div align="left" class="col-md-4">
-               <h2>
-                  Tempestt Neal
-                  <h5><i>PhD, U. of Florida - Gainesville, FL, USA, 2018</i></h5>
-               </h2>
-               <h4>
-                  Assistant Professor<br>
-                  <a target="_blank" href="https://www.usf.edu/engineering/cse/">Dept. of Computer Science and Engineering</a><br>
-                  <a target="_blank" href="https://www.usf.edu">University of South Florida</a><br>
-                  <!--
-                     P.O. Box 20537<br>
-                     1678 Nicosia, CYPRUS<br>-->
-                  Tel/Fax: <a target="_blank" href="tel:18133969353">(813)396-9353</a> <br/>
-                  Email: tjneal AT usf DOT edu<br/>
-                  Lab: <a target="_blank" href="https://tempestt-neal.github.io/ciber/">Cyber Identity and Behavior Research Lab (CIBeR)</a><br>
-                  Directions: <a target="_blank" href="https://goo.gl/maps/ApRy94Ci57n3USYZ8">https://goo.gl/maps/ApRy94Ci57n3USYZ8</a>
-               </h4>
-               <h4><i>Expertise: Biometrics &amp; Smart Sensing </i> <a href="#intro" onclick="javascript:reset_menus();$('#tab-intro-content').show();" class="btn-primary btn-xs">&raquo;</a><br></h4>
-            </div>
+
             <!--
                <i class="twittertop" style="display:none;" id="t1">
                    <div id="news" tyle="text-align: left"  class="col-md-5">&nbsp;
@@ -143,8 +125,9 @@
                <div class="allshow" style="display:none;" id="tab-intro-content">
                   <hr class="star-primary">
                   <p class="lead">
-                     The **C**yber **I**dentity and **Be**havior **R**esearch (CIBeR) Lab conducts research related to Identity and Access Management, *particularly, mobile biometrics and inclusive user authentication systems*, and Smart Sensing, *particularly for human behavior analysis and interdisplinary applications of behavior tracking.* We also conduct research in natural language processing (visit the [NLP Group](https://nlp-grp.github.io/) at USF). CIBeR is directed by [Dr. Tempestt Neal](https://tempestt-neal.github.io/web/), an assistant professor in the [Department of Computer Science and Engineering](http://cse.usf.edu/) at the [University of South Florida](https://www.usf.edu/). 
-                     **We are  looking for passionate new Master thesis students to join the team.** [(more info)]({{ site.url }}{{ site.baseurl }}/vacancies) **!**
+Certainly! Here's an edited version of your text:
+
+The <b>C</b>yber <b>I</b>dentity and <b>Be</b>havior <b>R</b>esearch (CIBeR) Lab focuses on research pertaining to Identity and Access Management, with a particular emphasis on mobile biometrics and inclusive user authentication systems. We also specialize in Smart Sensing, particularly for analyzing human behavior and exploring interdisciplinary applications of behavior tracking. Additionally, we engage in research within the field of natural language processing (NLP), which can be explored further at the [NLP Group](https://nlp-grp.github.io/) at USF. CIBeR is under the direction of Dr. Tempestt Neal, an assistant professor in the Department of Computer Science and Engineering at the University of South Florida.  
                   </p>
                </div>
             </div>
