--- a/research.html
+++ b/research.html
@@ -82,7 +82,7 @@
       <!-- Home Section -->
       <section  name="home" id="home" style="margin-top:40px">
          <div class="container">
-            <div align="left" class="col-md-12">
+            <div align="center" class="col-md-12">
                <a target="_blank" href="images/Ciber-horizontal.png">
                <img id="mobile-img" src="images/Ciber-horizontal.png" width="75%" border="0" alt=""></a>
             </div>
@@ -279,11 +279,11 @@ The <b>C</b>yber <b>I</b>dentity and <b>Be</b>havior <b>R</b>esearch (CIBeR) Lab
          <div class="container lead">
             <div style="text-align: left; margin-top:10px" class="col-md-12">
                <b class="noshow" style="display:none;" id="tab-8">
-               <button class="btn btn-default btn-lg btn-block"  style="display: block; width: 100%;" onclick="javascript:$('#tab-advising-content').toggle();">Advising  <span class="glyphicon glyphicon-chevron-down"></span></button>
+               <button class="btn btn-default btn-lg btn-block"  style="display: block; width: 100%;" onclick="javascript:$('#tab-advising-content').toggle();">Team  <span class="glyphicon glyphicon-chevron-down"></span></button>
                </b>
                <div class="allshow" style="display:none;" id="tab-advising-content">
                   <hr class="star-primary">
-                  <h2>Advising</h2>
+                  <h2>Team</h2>
                   <ul>
                      <li>
                         <span class="label label-info">Ph.D.</span> (ongoing) Parush Gera
