--- a/research.html
+++ b/research.html
@@ -284,32 +284,15 @@ The <b>C</b>yber <b>I</b>dentity and <b>Be</b>havior <b>R</b>esearch (CIBeR) Lab
                <div class="allshow" style="display:none;" id="tab-advising-content">
                   <hr class="star-primary">
                   <h2>Team</h2>
-                  <ul>
-                     <li>
-                        <span class="label label-info">Ph.D.</span> (ongoing) Parush Gera
-                     </li>
-                     <li>
-                        <span class="label label-info">Ph.D.</span> (ongoing) Meghna Chaudhary
-                     </li>
-                     <li>
-                        <span class="label label-info">Ph.D.</span> (ongoing) Sayde King
-                     </li>
-                     <li>
-                        <span class="label label-info">Ph.D.</span> (ongoing) Mohamed Ebraheem
-                     </li>
-                     <li>
-                        <span class="label label-info">Ph.D.</span> (ongoing) Wilson Lozano
-                     </li>
-                     <li>
-                        <span class="label label-info">Ph.D.</span> (ongoing) Hoorad Abootalebi
-                     </li>
+
+                  <img src='images/gera.png'> 
+    
                      <li>
                         <span class="label label-success">Ph.D.</span> (completed) Steven Diaz Hernandez
                      </li>
                      <li>
                         <span class="label label-success">M.S.</span> (completed) Khadija Zanna
                      </li>
-                  </ul>
                </div>
             </div>
          </div>
