--- a/research.html
+++ b/research.html
@@ -285,7 +285,14 @@ The <b>C</b>yber <b>I</b>dentity and <b>Be</b>havior <b>R</b>esearch (CIBeR) Lab
                   <hr class="star-primary">
                   <h2>Team</h2>
 
-                  <img src='images/gera.png'> 
+                  <img src="images/parush.jpg" height="100px" width="100px"> 
+                  <img src="images/parush.jpg" height="100px" width="100px"> > 
+                  <img src="images/parush.jpg" height="100px" width="100px"> > 
+                  <img src="images/parush.jpg" height="100px" width="100px"> > 
+                  <img src="images/parush.jpg" height="100px" width="100px"> > 
+                  <img src="images/parush.jpg" height="100px" width="100px"> > 
+
+
     
                      <li>
                         <span class="label label-success">Ph.D.</span> (completed) Steven Diaz Hernandez
