--- a/research.html
+++ b/research.html
@@ -285,13 +285,15 @@ The <b>C</b>yber <b>I</b>dentity and <b>Be</b>havior <b>R</b>esearch (CIBeR) Lab
                   <hr class="star-primary">
                   <h2>Team</h2>
 
-                  <img src="images/parush.jpg" height="100px" width="100px"> 
-                  <img src="images/parush.jpg" height="100px" width="100px"> > 
-                  <img src="images/parush.jpg" height="100px" width="100px"> > 
-                  <img src="images/parush.jpg" height="100px" width="100px"> > 
-                  <img src="images/parush.jpg" height="100px" width="100px"> > 
-                  <img src="images/parush.jpg" height="100px" width="100px"> > 
+                  <img src="images/parush.jpg" height="10%"/>
+                  <img src="images/wilson.jpeg" height="10%"/>
+                  <img src="images/sayde.png" height="10%"/>
+                  <br>
+                  <img src="images/mohamed.jpeg" height="10%"/>
+                  <img src="images/parush.jpg" height="10%"/>
+                  <img src="images/parush.jpg" height="10%"/>
 
+                 
 
     
                      <li>
