--- a/research.html
+++ b/research.html
@@ -286,7 +286,7 @@ The <b>C</b>yber <b>I</b>dentity and <b>Be</b>havior <b>R</b>esearch (CIBeR) Lab
                   <h2>Team</h2>
 
                   <table>
-       
+          <tr>
 
                   <td style="text-align: center; vertical-align: middle;">
                   <figure>
@@ -301,6 +301,10 @@ The <b>C</b>yber <b>I</b>dentity and <b>Be</b>havior <b>R</b>esearch (CIBeR) Lab
                     <figcaption>Parush Gera, Ph.D. Candidate</figcaption>
                   </figure>
                   </td>
+
+                     </tr>
+
+                     <tr>
 
                       <td style="text-align: center; vertical-align: middle;">
                   <figure>
@@ -330,6 +334,8 @@ The <b>C</b>yber <b>I</b>dentity and <b>Be</b>havior <b>R</b>esearch (CIBeR) Lab
                   </figure>
                   </td>
 
+                         </tr>
+
                      
                </table>
 
@@ -339,10 +345,10 @@ The <b>C</b>yber <b>I</b>dentity and <b>Be</b>havior <b>R</b>esearch (CIBeR) Lab
 
              <ul>
                      <li>
-                        <span class="label label-success">Ph.D.</span> (completed) Steven Diaz Hernandez
+                        Steven Diaz Hernandez, Ph.D. (Computer Science and Engineering)
                      </li>
                      <li>
-                        <span class="label label-success">M.S.</span> (completed) Khadija Zanna
+                        Khadija Zanna, M.S. (Computer Science and Engineering)
                      </li>
 
                 </ul>
