--- a/research.html
+++ b/research.html
@@ -295,8 +295,8 @@ The <b>C</b>yber <b>I</b>dentity and <b>Be</b>havior <b>R</b>esearch (CIBeR) Lab
 
                       <td style="text-align: center; vertical-align: middle;">
                   <figure>
-                    <img src="images/parush.jpg" style="width:30%">
-                    <figcaption>Parush Gera, Ph.D. Candidate</figcaption>
+                    <img src="images/wilson.jpeg" style="width:30%">
+                    <figcaption>Wilson Lozano, Ph.D. Student</figcaption>
                   </figure>
                   </td>
 
@@ -304,33 +304,34 @@ The <b>C</b>yber <b>I</b>dentity and <b>Be</b>havior <b>R</b>esearch (CIBeR) Lab
 
                       <td style="text-align: center; vertical-align: middle;">
                   <figure>
-                    <img src="images/parush.jpg" style="width:30%">
-                    <figcaption>Parush Gera, Ph.D. Candidate</figcaption>
+                    <img src="images/sayde.png" style="width:30%">
+                    <figcaption>Sayde King, Ph.D. Candidate</figcaption>
                   </figure>
                   </td>
 
               </tr>
+                     <tr><td></br></td><td></br></td><td></br></td></tr>
 
                      <tr>
 
                      <td style="text-align: center; vertical-align: middle;">
                   <figure>
-                    <img src="images/parush.jpg" style="width:30%">
-                    <figcaption>Parush Gera, Ph.D. Candidate</figcaption>
+                    <img src="images/hoorad.jpeg" style="width:30%">
+                    <figcaption>Hoorad Abootalebi, Ph.D. Student</figcaption>
                   </figure>
                   </td>
 
                       <td style="text-align: center; vertical-align: middle;">
                   <figure>
-                    <img src="images/parush.jpg" style="width:30%">
-                    <figcaption>Parush Gera, Ph.D. Candidate</figcaption>
+                    <img src="images/mohamed.jpeg" style="width:30%">
+                    <figcaption>Mohamed Ebraheem, Ph.D. Student</figcaption>
                   </figure>
                   </td> 
 
                       <td style="text-align: center; vertical-align: middle;">
                   <figure>
-                    <img src="images/parush.jpg" style="width:30%">
-                    <figcaption>Parush Gera, Ph.D. Candidate</figcaption>
+                    <img src="images/meghna.jpg" style="width:30%">
+                    <figcaption>Meghna Chaudhary, Ph.D. Student</figcaption>
                   </figure>
                   </td>
 
