--- a/research.html
+++ b/research.html
@@ -55,7 +55,7 @@
                      <a onclick="javascript:reset_menus();$('#tab-courses-content').show();" href="#team">Team</a>
                   </li>
                   <li class="page-scroll">
-                     <a onclick="javascript:reset_menus();$('#tab-courses-content').show();" href="#news">News</a>
+                     <a href="#news">News</a>
                   </li>
                   <li class="page-scroll">
                      <a onclick="javascript:reset_menus();$('#tab-contact-content').show();" href="#contact">Contact</a>
@@ -340,7 +340,7 @@ The <b>C</b>yber <b>I</b>dentity and <b>Be</b>havior <b>R</b>esearch (CIBeR) Lab
                      
                </table>
 
-              
+               </br>
                                    <h4>Graduates</h4>
 
 
