--- a/research.html
+++ b/research.html
@@ -153,11 +153,11 @@
             <h2> Research Study Participants </h2>
           <div class="container lead">
             <div class="row">
-               <div class="col-md-3">
+               <div class="col-md-12">
                   <h4>Our laboratory frequently conducts research studies that require input from participants.</h4>
                   <p>We are currently seeking participants for the following study:</p>
                   <ul>
-                     <li>Smart Door Authentication System. <a href="5331.png" target="_blank">Download Recruitment Flyer</a>. Lead Researcher: Mohamed Ebraheem.</li>
+                     <li><b>Smart Door Authentication System</b> (<a href="5331.png" target="_blank">Download Recruitment Flyer</a>) <br> <b>Lead Researcher:</b> Mohamed Ebraheem.</li>
                   </ul>
                </div>
             </div>
