--- a/research.html
+++ b/research.html
@@ -157,8 +157,8 @@
                   <h4>Our laboratory frequently conducts research studies that require input from participants.</h4>
                   <p>We are currently seeking participants for the following studies:</p>
                   <ul>
-                     <li><b>Study 005331: Smart Door Authentication System</b> (<a href="5331.png" target="_blank">Download Recruitment Flyer</a>) <br> <b>Lead Researcher:</b> Mohamed Ebraheem</li>
-                     <li><b>Study 006481: I-CLAIM: Focus Groups: Assessing User Authentication Experiences with Historically Excluded Groups</b> (<a href="6481.png" target="_blank">Download Recruitment Flyer</a>) <br> <b>Lead Researcher:</b> Hoorad Abootalebi</li>
+                     <li><b>Study 005331: Smart Door Authentication System</b> (<a href="images/5331.png" target="_blank">Download Recruitment Flyer</a>) <br> <b>Lead Researcher:</b> Mohamed Ebraheem</li>
+                     <li><b>Study 006481: I-CLAIM: Focus Groups: Assessing User Authentication Experiences with Historically Excluded Groups</b> (<a href="images/6481.pdf" target="_blank">Download Recruitment Flyer</a>) <br> <b>Lead Researcher:</b> Hoorad Abootalebi</li>
 
                   </ul>
                </div>
